# airplane

./: Makefile.am  README  configure.ac
.github/workflows/: tagged-release.yaml
m4/: airplane.m4
src/: Makefile.inc  airplane.1  airplane.c
